fixed team card height on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,19 @@
-@import url('http://fonts.cdnfonts.com/css/valorant');
+@import url("http://fonts.cdnfonts.com/css/valorant");
 
-@font-face {font-family: "Tungsten Bold"; src: url("//db.onlinewebfonts.com/t/561f38b1f4570de0fb8a39d691ab058c.eot"); src: url("//db.onlinewebfonts.com/t/561f38b1f4570de0fb8a39d691ab058c.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/561f38b1f4570de0fb8a39d691ab058c.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/561f38b1f4570de0fb8a39d691ab058c.woff") format("woff"), url("//db.onlinewebfonts.com/t/561f38b1f4570de0fb8a39d691ab058c.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/561f38b1f4570de0fb8a39d691ab058c.svg#Tungsten Bold") format("svg"); }
+@font-face {
+    font-family: "Tungsten Bold";
+    src: url("//db.onlinewebfonts.com/t/561f38b1f4570de0fb8a39d691ab058c.eot");
+    src: url("//db.onlinewebfonts.com/t/561f38b1f4570de0fb8a39d691ab058c.eot?#iefix")
+            format("embedded-opentype"),
+        url("//db.onlinewebfonts.com/t/561f38b1f4570de0fb8a39d691ab058c.woff2")
+            format("woff2"),
+        url("//db.onlinewebfonts.com/t/561f38b1f4570de0fb8a39d691ab058c.woff")
+            format("woff"),
+        url("//db.onlinewebfonts.com/t/561f38b1f4570de0fb8a39d691ab058c.ttf")
+            format("truetype"),
+        url("//db.onlinewebfonts.com/t/561f38b1f4570de0fb8a39d691ab058c.svg#Tungsten Bold")
+            format("svg");
+}
 
 :root {
     --red: #fd4556;
@@ -55,7 +68,6 @@ body {
         scroll-margin: 80px;
     }
 }
-
 
 .inner-responsive-page {
     min-height: var(--inner-responsive-page-height);
@@ -202,7 +214,7 @@ body {
     color: var(--black);
 }
 
-.sponsor-wrapper{
+.sponsor-wrapper {
     overflow: hidden;
 }
 
@@ -228,17 +240,16 @@ body {
 
 .sponsor-wrapper-in::-webkit-scrollbar {
     width: 0.5rem;
-    
 }
 
 .sponsor-wrapper-in::-webkit-scrollbar-track {
-    background: 0 0
+    background: 0 0;
 }
 
 .sponsor-wrapper-in::-webkit-scrollbar-thumb {
     background: #666;
     border-radius: 1rem;
-    padding:0.25rem;
+    padding: 0.25rem;
 }
 
 .sponsor-wrapper-in::-webkit-scrollbar-thumb:hover {
@@ -355,7 +366,7 @@ body {
     text-align: center;
     font-size: 55px;
     /* color: var(--red); */
-    color: #F0CDCD;
+    color: #f0cdcd;
     font-family: "Tungsten Bold";
     /* width and color */
 }
@@ -621,7 +632,7 @@ background: url("https://pbs.twimg.com/ext_tw_video_thumb/1248732574224207872/pu
     z-index: 3;
     transform: translate(-50%, -50%);
     /* color: var(--red); */
-    color: #F0CDCD;
+    color: #f0cdcd;
     /* width and color */
     font-size: 80px;
     margin: 0 auto;
@@ -915,7 +926,7 @@ background: url("https://pbs.twimg.com/ext_tw_video_thumb/1248732574224207872/pu
     /* height: 285px; */
     border: solid 2px #fd4556;
     box-shadow: inset 0 0 10px #fd4556;
-    font-family: georgia,sans-serif;
+    font-family: georgia, sans-serif;
     border-bottom-right-radius: 20%;
 }
 
@@ -986,11 +997,13 @@ background: url("https://pbs.twimg.com/ext_tw_video_thumb/1248732574224207872/pu
 @media only screen and (max-width: 700px) {
     .image-container {
         max-width: 200px;
+        height: 270px;
     }
 }
 @media only screen and (max-width: 400px) {
     .image-container {
         max-width: 150px;
+        height: 200px;
     }
 }
 
